Version - 2.4 -
-

Version - 2.3 - 01-16-15
-New function dropPaleoTip which is a simple wrapper for drop.tip in ape but uses fixRootTime to adjust the $root.time element in the resulting tree, after tips are dropped (Thanks to a conversation with Graeme Lloyd)
-Modified how fixRootTime worked so that (by default) it drew the root age based on shared taxon membership of treeNew between the clades in treeOrig, see the description of argument nodeAgeTransfer for complete details. The original method, based on modifying the root-time based on changes in tree-depth (which is less robust to changes in taxon membership) can be executed by setting the argument nodeAgeTransfer to FALSE.
-Modified dateNodes so that tip labels given to label node dates when the argument labelDates is TRUE are sorted alphabetically
-Added a function minBranchLength which mirrors the 'mbl' time-scaling approach, in taking a tree that already has edge lengths and adjusting branches so all are above some given minimum branch length. timePaleoPhy was modified to use this function rather than doing this algorithm internally.
-Added checks for duplicate taxa in input time or tree data for time-scaling functions (Thanks Tim Astrop for pointing this out!)
-Fixed bug in timeSliceTree where an error was produced if plot=FALSE was given (Thanks to Min Wang, Tyler Smith and Manabu Sakamoto!)

Version - 2.2 - 09-18-14
-Added a new time-scaling method to timePaleoPhy, "equal2" which is otherwise identical to "equal" but replicates the old branch-ordering routine used for 'equal' prior to version 2.0
-Fixed bug in simPaleoTrees when ranges.only=FALSE, modified examples to catch error in the future
-Altered several parts of the timePaleoPhy help file to clarify use of timePaleoPhy (not bin_timePaleoPhy) when there is stratigraphic age uncertainty for taxa, including dropping a harshly worded Note. (Thanks Gene Hunt for pointing out some contradictions in the text!)