@@ -14,5 +14,5 @@ Maintainer: David W. Bapst <dwbapst@gmail.com>
 Description: Analyzes, time-scales and simulates phylogenies of extinct/fossil
     lineages, along with calculation of diversity curves. Also fits likelihood
     models to estimate sampling rates from stratigraphic ranges.
-License: GPL (>= 2)
+License: CC0
 URL: https://github.com/dwbapst/paleotree , http://webpages.sdsmt.edu/~dbapst/
